# workflow-ai

./: Dockerfile  README.md  entrypoint.sh  pyproject.toml
src/workflow_ai/: __init__.py  cli.py  config.py  copilot_auth.py  definitions.py  engine.py  graph.py  logger.py  models.py  registry.py
src/workflow_ai/backends/: __init__.py  _agentic.py  anthropic_sdk.py  base.py  claude.py  claude_code.py  codex.py  copilot.py  openai_sdk.py  pi.py  tools.py
src/workflow_ai/lessons/: __init__.py  definitions.py
src/workflow_ai/phraseforge/: __init__.py  definitions.py  schemas.py  workflow.yaml
src/workflow_ai/phraseforge/skills/compact/: SKILL.md
src/workflow_ai/phraseforge/skills/core/: SKILL.md
src/workflow_ai/phraseforge/skills/core/references/: languages.md  levels.md  vocabulary.md
src/workflow_ai/phraseforge/skills/web/: SKILL.md
src/workflow_ai/research/: __init__.py  definitions.py  schemas.py  workflow.yaml
src/workflow_ai/research/skills/: synthesis.md  web-researcher.md
src/workflow_ai/research/skills/templates/: report-template.md
src/workflow_ai/research/tools/: arxiv-search.py  rag-index.py  rag-query.py  web-search.py  wikipedia-search.py
src/workflow_ai/workflows/: phraseforge.yaml  research.yaml
tests/: conftest.py  test_anthropic_backend.py  test_cli_wiring.py  test_codex_backend.py  test_config.py  test_copilot_auth.py  test_copilot_backend.py  test_engine_fanout.py  test_graph_validation.py  test_logger.py  test_openai_backend.py  test_phraseforge_workflow.py  test_pi_backend.py  test_registry.py  test_tools.py
(+8 files in other folders)
