[project]
name = "workflow-ai"
version = "0.1.0"
description = "A strict-DAG harness that forces a headless coding agent through a defined workflow graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "networkx>=3.2",
]

[project.scripts]
workflow-ai = "workflow_ai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
