[project]
name = "workflow-ai"
version = "0.1.0"
description = "A strict-DAG harness that forces a headless coding agent through a defined workflow graph."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "networkx>=3.2",
    "httpx>=0.27",
    "anthropic>=0.116.0",
    "openai>=2.44.0",
]

[project.scripts]
workflow-ai = "workflow_ai.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.105,<1.0"]
openai = ["openai>=2.38,<3.0"]
sdk = ["anthropic>=0.105,<1.0", "openai>=2.38,<3.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/workflow_ai"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
